syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.my.qs.grpc";
option java_outer_classname = "Student";

message MyRequest {
    string name = 1;
}

message MyResponse {
    string age = 1;
}

service Hello {
    rpc sayHello (MyRequest) returns (MyResponse);
}
